--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -16,9 +16,9 @@ $dark:                            #444 !default;
 */
 
 @font-face {
-	font-family: "OpenSans";
-  src: url("../lib/ionic/fonts/OpenSans-Regular.ttf");
-  src: url("../lib/ionic/fonts/OpenSans.ttf") format("truetype");
+	font-family: "Caelilia";
+  src: url("../lib/ionic/fonts/CaeciliaLTStd-Roman.otf");
+  src: url("../lib/ionic/fonts/CaeciliaLTStd-Roman.otf") format("opentype");
   font-weight: normal;
   font-style: normal; 
 }
