ngCordova is working

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -30,9 +30,11 @@ h1 {
 	margin-top: 20px;
 }
 
-.record-time {
-	font-weight: bold;
+.bar-stable {
+	box-shadow: 0px 5px 5px grey;
 }
+
+
 
 $font-family-sans-serif: "OpenSans";
 $stable: #2DBE60;
