--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -28,8 +28,8 @@ h1 {
   vertical-align: top;
   margin-top: 20px; }
 
-.record-time {
-  font-weight: bold; }
+.bar-stable {
+  box-shadow: 0px 5px 5px grey; }
 
 /*!
   Ionicons, v1.5.2
